Fix box sizing and overflow issues and add reset button

--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
-html {
+html, body {
     height: 100%;
     width: 100%;
+    margin: 0;
+    padding: 0;
   }
+
   #flex-container {
     display: flex;
     flex-direction: column;
@@ -11,7 +14,7 @@ html {
     width: 100%;  
   }
   
-  .box-number {
+  .box-number, .reset-boxes {
     margin-bottom: 20px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: 800;
@@ -23,20 +26,13 @@ html {
     flex-wrap: wrap;
     width: 512px;
     height: 512px;
-    /* align-items: center; */
     background-color: #bd0a0a;
-    border-width: 32px;
-    border-style: solid;
-    border-color: #bd0a0a;
+    border: 32px solid #bd0a0a;
     border-radius: 16px;
   }
   
   .squares {
-    display: flex;
+    box-sizing: border-box;
     background-color: #e8e8e8;
-    border-width: 1px;
-    border-style: solid;
-    border-color: #2b2b2b;
-    min-height: 0;
-    min-width: 0;
+    border: 1px solid #2b2b2b;
   }
